--- a/old.html
+++ b/old.html
@@ -7,31 +7,6 @@
     <title>Web Development Resources</title>
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Russo+One&display=swap"
-        rel="stylesheet">
-    <style>
-        *{
-            list-style: square;
-        }
-        .russo-one-regular {
-            font-family: "Russo One", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .josefin-sans-regular {
-            font-family: "Josefin Sans", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-    </style>
 </head>
 
 <body class="bg-gray-900 text-white">
@@ -84,47 +59,47 @@
         <section class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl mb-4">Helpers</h2>
             <h3 class="text-xl mb-2">Software (IDE), Docs, Icons, Fonts, Images, Videos, Audio, Deploy</h3>
-            <ul class="list-disc list-inside grid grid-cols-1 md:grid-cols-2 gap-4 text-ellipsis">
+            <ul class="list-disc list-inside grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- VSCODE -->
-                <li class="text-ellipsis "><a href="https://code.visualstudio.com/download" target="_blank"
+                <li><a href="https://code.visualstudio.com/download" target="_blank"
                         class="text-blue-400 hover:text-blue-600">VSCODE (IDE) - Download here</a></li>
                 <!-- Docs -->
-                <li class="text-ellipsis "><a href="https://www.w3schools.com/html/" target="_blank"
+                <li><a href="https://www.w3schools.com/html/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Docs (code syntax) - w3schools</a> -- <a
                         href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank"
                         class="text-blue-400 hover:text-blue-600">mozilla</a></li>
                 <!-- FontAwesomes -->
-                <li class="text-ellipsis "><a href="https://fontawesome.com/" target="_blank"
+                <li><a href="https://fontawesome.com/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">FontAwesomes - Visit here</a> -- How to use: <a
                         href="https://www.youtube.com/watch?v=oXrqKgsCNRk" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Watch tutorial</a></li>
                 <!-- Google Icons -->
-                <li class="text-ellipsis "><a href="https://fonts.google.com/icons" target="_blank"
+                <li><a href="https://fonts.google.com/icons" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Google Icons - Visit here</a> -- How to use: <a
                         href="https://www.youtube.com/watch?v=XMdZnJ1hzPo" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Watch tutorial</a></li>
                 <!-- Fonts -->
-                <li class="text-ellipsis "><a href="https://fonts.google.com/" target="_blank"
+                <li><a href="https://fonts.google.com/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Fonts - Visit here</a> -- How to use: <a
                         href="https://www.youtube.com/watch?v=eLY5KSXcQ6c" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Watch tutorial</a></li>
                 <!-- Free Images -->
-                <li class="text-ellipsis "><a href="https://www.freeimages.com/photo" target="_blank"
+                <li><a href="https://www.freeimages.com/photo" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Images - Visit here</a></li>
                 <!-- Free Videos -->
-                <li class="text-ellipsis "><a href="https://www.pexels.com/videos/" target="_blank"
+                <li><a href="https://www.pexels.com/videos/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Videos - Visit here</a></li>
                 <!-- Free Audio -->
-                <li class="text-ellipsis "><a href="https://pixabay.com/music/" target="_blank"
+                <li><a href="https://pixabay.com/music/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Audio - Visit here</a></li>
                 <!-- Feel Free -->
-                <li class="text-ellipsis "><a href="https://chatgpt.com/" target="_blank"
+                <li><a href="https://chatgpt.com/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Feel Free - Visit here</a></li>
                 <!-- Free Ideas + Code -->
-                <li class="text-ellipsis "><a href="https://codepen.io/" target="_blank"
+                <li><a href="https://codepen.io/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Ideas + Code - Visit here</a></li>
                 <!-- Free Deploy websites -->
-                <li class="text-ellipsis "><a href="https://app.netlify.com/" target="_blank"
+                <li><a href="https://app.netlify.com/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Deploy websites - Visit here</a> -- How to
                     deploy: <a href="https://www.youtube.com/watch?v=ILpn7hvtCOA" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Watch tutorial</a></li>
@@ -135,30 +110,20 @@
         <section class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl mb-4">Tailwind CSS Playlist</h2>
             <ul>
-                <li class="text-ellipsis "><a href="https://tailwindcss.com/docs/installation" target="_blank"
+                <li><a href="https://tailwindcss.com/docs/installation" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Tailwind CSS - Documentation</a></li>
-                <li class="text-ellipsis "><a href="https://www.youtube.com/playlist?list=PL7wL5A1qzCwiUP8y0opx--ei2EZPLQ3tN" target="_blank"
-                        class="text-blue-400 hover:text-blue-600">Tailwind CSS - YouTube Playlist</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PLjVLYmrlmjGfpwYhVAbiGAhFl6h8XWDV_" target="_blank"
+                        class="text-blue-400 hover:text-blue-600">How to use Tailwind CSS - Watch playlist</a></li>
             </ul>
         </section>
 
-        <!-- Footer Section -->
-        <footer class="text-center">
-            <p class="text-sm">Made with <i class="fas fa-heart text-red-500"></i> by AR</p>
-        </footer>
+        <!-- Congratulations Section -->
+        <section class="bg-gray-800 rounded-lg p-6 mb-8">
+            <h2 class="text-2xl mb-4">Congratulations!</h2>
+            <p>Use Tailwind CSS CDN and create a dark mode design.</p>
+        </section>
     </div>
-
-    <!-- Custom CSS -->
-    <style>
-        img.rounded-lg {
-            border-radius: 1rem;
-            transition: transform 0.3s ease;
-        }
-
-        img.rounded-lg:hover {
-            transform: scale(1.05);
-        }
-    </style>
 </body>
 
 </html>
+
