--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <!-- Footer Section -->
         <footer class="text-center">
-            <p class="text-sm">Made with <i class="fas fa-heart text-red-500"></i> by AR</p>
+            <p class="text-sm">Made with <i class="fas fa-heart text-red-500 animate-bounce"></i> by AR</p>
         </footer>
     </div>
 
