--- a/index.html
+++ b/index.html
@@ -123,11 +123,20 @@
                 <!-- Free Ideas + Code -->
                 <li class="text-ellipsis "><a href="https://codepen.io/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Ideas + Code - Visit here</a></li>
+                        <li class="text-ellipsis "><a href="https://uiverse.io/" target="_blank"
+                            class="text-blue-400 hover:text-blue-600">Uiverse -- Free HTML components</a></li>
+    
+    
+
                 <!-- Free Deploy websites -->
                 <li class="text-ellipsis "><a href="https://app.netlify.com/" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Free Deploy websites - Visit here</a> -- How to
                     deploy: <a href="https://www.youtube.com/watch?v=ILpn7hvtCOA" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Watch tutorial</a></li>
+
+
+
+
             </ul>
         </section>
 
