add some styles

--- a/index.html
+++ b/index.html
@@ -70,13 +70,16 @@
         <!-- HTML5 & CSS3 Playlist Section -->
         <section class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl mb-4">HTML5 & CSS3</h2>
-            <p class="mb-4">New Playlist: <a href="https://www.youtube.com/playlist?list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w"
-                    target="_blank" class="text-blue-400 hover:text-blue-600">Watch first 50 videos</a></p>
-            <p class="text-sm mb-2">[Daily minimum 4 videos]</p>
-            <h3 class="text-xl mb-2">Important Extensions</h3>
-            <div>
-                <a href="https://drive.google.com/file/d/1TsI6O91PPHxZJSyhkviSphj6CuoBJaY3/view?usp=sharing"
-                    target="_blank" class="text-blue-400 hover:text-blue-600">Download here</a>
+            <div class="px-4">
+
+                <p class="mb-4">New Playlist: <a href="https://www.youtube.com/playlist?list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w"
+                        target="_blank" class="text-blue-400 hover:text-blue-600">&#9658;Watch first 50 videos</a></p>
+                <p class="text-sm mb-2">[Daily minimum 4 videos]</p>
+                <h3 class="text-xl mb-2">Important Extensions</h3>
+                <div>
+                    <a href="https://drive.google.com/file/d/1TsI6O91PPHxZJSyhkviSphj6CuoBJaY3/view?usp=sharing"
+                        target="_blank" class="text-blue-400 hover:text-blue-600">&#9658;Download here</a>
+            </div>
             </div>
         </section>
 
@@ -84,7 +87,7 @@
         <section class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl mb-4">Helpers</h2>
             <h3 class="text-xl mb-2">Software (IDE), Docs, Icons, Fonts, Images, Videos, Audio, Deploy</h3>
-            <ul class="list-disc list-inside grid grid-cols-1 md:grid-cols-2 gap-4 text-ellipsis">
+            <ul class="list-disc list-inside grid grid-cols-1 md:grid-cols-2 gap-4 text-ellipsis px-8">
                 <!-- VSCODE -->
                 <li class="text-ellipsis "><a href="https://code.visualstudio.com/download" target="_blank"
                         class="text-blue-400 hover:text-blue-600">VSCODE (IDE) - Download here</a></li>
@@ -143,7 +146,7 @@
         <!-- Tailwind CSS Playlist Section -->
         <section class="bg-gray-800 rounded-lg p-6 mb-8">
             <h2 class="text-2xl mb-4">Tailwind CSS Playlist</h2>
-            <ul>
+            <ul class="px-8">
                 <li class="text-ellipsis "><a href="https://tailwindcss.com/docs/installation" target="_blank"
                         class="text-blue-400 hover:text-blue-600">Tailwind CSS - Documentation</a></li>
                 <li class="text-ellipsis "><a href="https://www.youtube.com/playlist?list=PL7wL5A1qzCwiUP8y0opx--ei2EZPLQ3tN" target="_blank"
@@ -152,11 +155,18 @@
         </section>
 
         <!-- Footer Section -->
-        <footer class="text-center">
-            <p class="text-sm">Made with <i class="fas fa-heart text-red-500 animate-bounce"></i> by AR</p>
+        <footer class="text-center group">
+            <p class="text-sm">Made with
+                <span class="group-hover:animate-pulse">
+
+                    <i class="fas fa-heart text-red-500 fa-bounce"></i>
+                </span> 
+
+                 by AR</p>
         </footer>
     </div>
 
 </body>
 
 </html>
+ 
