--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
 
 
 
+                <!-- Socket.io - websocket -->
+                <li class="text-ellipsis "><a href="https://socket.io/" target="_blank"
+                        class="text-blue-400 hover:text-blue-600">Adv- Socket.io - Visit here</a> -- How to
+                    push code: <a href="https://www.youtube.com/watch?v=_h7Pc1woq-I&t=2793s" target="_blank"
+                        class="text-blue-400 hover:text-blue-600">Best tutorial</a></li>
+
+
+
 
             </ul>
         </section>
