add 1 more css3 link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
                 <p class="mb-4">New Playlist: <a href="https://www.youtube.com/playlist?list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w"
                         target="_blank" class="text-blue-400 hover:text-blue-600">&#9658;Watch first 50 videos</a></p>
+                <p class="mb-4">CSS3: <a href="https://www.youtube.com/watch?v=ESnrn1kAD4E"
+                        target="_blank" class="text-blue-400 hover:text-blue-600">&#9658;Watch full 7 Hr</a></p>
                 <p class="text-sm mb-2">[Daily minimum 4 videos]</p>
                 <h3 class="text-xl mb-2">Important Extensions</h3>
                 <div>
